--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,30 +7,48 @@
     tools:context="com.example.br.sorteiomega.MainActivity">
 
     <TextView
+        android:layout_centerInParent="true"
         android:id="@+id/numeros"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="@string/numeroSorte"
-        android:textSize="28sp"
-        android:textStyle="bold" />
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+        android:text="@string/numeroSorte" />
 
-    <Button
-        android:id="@+id/numeroSorte"
+    <LinearLayout
+        android:gravity="bottom"
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/btSorteio" />
+        android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/guardarNumero"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/btGuardar" />
+        <Button
+            android:textColor="@color/white"
+            style="@style/Base.Widget.AppCompat.Button.Colored"
+            android:layout_weight="1"
+            android:id="@+id/numeroSorte"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/btSorteio" />
 
-    <Button
-        android:id="@+id/visualizarNumero"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/btVisualizar" />
+        <Button
+            android:enabled="false"
+            android:textColor="@color/white"
+            style="@style/Base.Widget.AppCompat.Button.Colored"
+            android:layout_weight="1"
+            android:id="@+id/guardarNumero"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/btGuardar" />
 
-</LinearLayout>
+        <Button
+            android:textColor="@color/white"
+            style="@style/Base.Widget.AppCompat.Button.Colored"
+            android:layout_weight="1"
+            android:id="@+id/visualizarNumero"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/btVisualizar" />
+    </LinearLayout>
+
+
+</RelativeLayout>
